src/modules/70-pipeline/components/RunPipelineModal/RunPipelineForm.module.scss
/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.optionBtns {
  display: flex;
  align-items: center;
  margin: 0 250px;
  margin-left: 60px;
}

.run-form {
  min-height: initial;
  .editor {
    width: 100%;
    // max height is same as the height in visual view
    max-height: 65vh !important;
    padding-top: var(--spacing-medium);
    padding-bottom: var(--spacing-medium);
  }
  .content {
    min-height: calc(100vh - 187px);
    overflow: auto;
    display: block;
    max-height: calc(100vh - 187px);

    & > form {
      width: 100%;
    }
  }
  .pipelineHeader {
    height: 62px;
    width: 100% !important;
    display: inline-block !important;
  }

  .radio-group {
    padding-left: 24px !important;
  }

  .radio {
    padding-left: 32px !important;
  }

  .divider {
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
    margin-top: var(--spacing-4);
  }

  .footer {
    border-top: 1px solid rgba(0, 0, 0, 0.1);
    width: 100%;
  }

  [class*='OverlaySpinner--overlaySpinner'] {
    min-height: calc(100% - var(--page-header-height, 64px));
  }
}

.preFlightCheckModal {
  width: 900px;
  padding: var(--spacing-large);
}

.runFormExecutionView {
  .content {
    min-height: calc(100vh - 220px);
    overflow: auto;
    display: block;
    max-height: calc(100vh - 220px);
  }

  [class*='OverlaySpinner--overlaySpinner'] {
    min-height: calc(100% - var(--page-header-height, 64px));
    overflow: hidden;
  }
}

.run-modal-header {
  min-height: var(--spacing-8);
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: var(--spacing-medium) var(--spacing-large);
}

.run-modal-sub-heading {
  justify-content: space-between !important;
  align-items: center;
}

.run-modal-header-title {
  display: flex;
  align-items: center;
  min-width: 120px;
}

.run-modal-form-content {
  max-height: 65vh !important;
  min-height: 30vh;
  overflow-x: hidden;
  overflow: auto !important;
  border-top: 1px solid var(--grey-200);
  &.noRuntimeInput {
    border-top: none;
    min-height: unset;
  }
}

.runModalFormContentExecutionView {
  max-height: 85vh !important;
  min-height: 200px;
  overflow-x: hidden;
  overflow: auto !important;
  background-color: var(--form-bg);
}

.no-pipeline-input-set-form {
  padding-top: var(--spacing-medium);
}

.help-section {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.help-icon {
  padding-right: var(--spacing-3) !important;
}

.inputSetsUpdatingSpinner {
  transform: scale(0.6);
}

.valueProviderRadio {
  padding: var(--spacing-small) var(--spacing-xlarge) var(--spacing-small) var(--spacing-huge) !important;
  border: 1px solid var(--grey-200);
  border-radius: 4px;
  background-color: var(--white);
}

.selectedValueProvider {
  border-color: var(--primary-6);
  background-color: rgba(220, 238, 255, 0.5);
  color: var(--form-body-text);
}

.actionButtons {
  margin-top: 0 !important;
}

.secondaryButton {
  margin-left: var(--spacing-medium) !important;
}

.footerCheckbox {
  border-radius: 4px;
  font-size: var(--font-size-small) !important;
  opacity: 0.8;
}

.inputSetFormRunPipeline {
  padding-top: var(--spacing-xxlarge) !important;
}

.stagesDropdown {
  margin-left: var(--spacing);
}

.stageSelectionItem {
  display: grid;
  padding: var(--spacing-small);
  cursor: pointer;
  .stageWarning {
    margin-left: var(--spacing-small);
  }
  .stageName {
    margin-right: var(--spacing-small) !important;
  }
}

.infoStrip {
  display: grid;
  grid-template-columns: 25px 1fr;
  height: 30px;
  background-color: var(--primary-2);
  color: var(--primary-7);
  align-items: center;
  padding: 0 var(--spacing-medium);
  .iconInfo {
    margin-right: var(--spacing-small);
  }
}

.expressionsTooltip {
  :global(.bp3-popover) {
    .bp3-tooltip .bp3-popover-arrow-fill {
      fill: var(--white) !important;
    }
  }
  .error {
    color: var(--error);
  }
  :global(.bp3-popover-content) {
    border-radius: 8px;
    background: var(--white);
    color: var(--primary);
    ul {
      list-style: none;
      padding: 0 var(--spacing-small);
    }
  }
}

.underlineText {
  text-decoration: underline;
}

.disabledStageDropdown {
  .MultiSelectDropDown--main
    .MultiSelectDropDown--dropdownButton.MultiSelectDropDown--withBorder.MultiSelectDropDown--selected {
    border-color: none;
  }
}

.noDisplay {
  visibility: hidden;
}

.crossIcon {
  position: absolute;
  right: var(--spacing-large);
  top: var(--spacing-large);
}

.modalContent {
  max-height: fit-content;
  min-height: 150px;
  height: calc(100% - 48px);
}

.runPipelineDialog {
  position: relative;
  padding-bottom: 0 !important;
  background-color: var(--form-bg) !important;
}

.replaceExpressionForm {
  margin: var(--spacing-large) !important;
  padding-top: var(--spacing-large) !important;
  .form {
    padding: var(--spacing-small) var(--spacing-xlarge) !important;
    background: var(--white) !important;
    border: 1px solid var(--grey-200);
    border-radius: var(--spacing-2);
  }

  :global(.bp3-input-group) {
    input {
      width: 300px;
    }
  }
}

.gitRemoteDetailsWrapper {
  display: flex;
  padding: 0 var(--spacing-large) var(--spacing-medium);
}

.templateErrorView {
  background: var(--red-50) !important;
  height: 480px;
  margin: var(--spacing-7) !important;
}

.noInputSetSelectionRunPipeline {
  padding-top: var(--spacing-small) !important;
}

